# SportSciMCP

./: .gitignore  README.md  pyproject.toml
config/: notebooks.yaml  secrets.example.env  sources.yaml
docs/: ROADMAP.md
sportsci_mcp/: __init__.py  config.py  models.py  registry.py  server.py
sportsci_mcp/adapters/: __init__.py  arxiv.py  base.py  core.py  dimensions.py  figshare.py  html_search.py  kaggle.py  openalex.py  osf.py  physionet.py  pubmed.py  scrape.py  semantic_scholar.py  sportdiscus.py  zenodo.py
sportsci_mcp/data/: norms.yaml
sportsci_mcp/data/rtp/: acl.yaml  ankle_sprain.yaml  hamstring.yaml
sportsci_mcp/services/: __init__.py  bibtex.py  briefs.py  literature_tools.py  load.py  norms.py  notebooklm.py  rtp.py  youtube_pipeline.py
