[project]
name = "sportsci-mcp"
version = "0.4.0"
description = "MCP server for sports science literature, scraping, briefs, and NotebookLM workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "The Tech Lab" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[project.scripts]
sportsci-mcp = "sportsci_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sportsci_mcp*"]

[tool.setuptools.package-data]
sportsci_mcp = ["data/**/*.yaml"]
